--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@aws-cdk/aws-codepipeline": "^1.103.0",
     "@aws-cdk/aws-codepipeline-actions": "^1.103.0",
     "@aws-cdk/aws-lambda": "^1.103.0",
+    "@aws-cdk/aws-s3": "^1.103.0",
     "@aws-cdk/core": "^1.103.0",
     "@aws-cdk/pipelines": "^1.103.0",
     "aws-cdk": "^1.103.0",
