--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@aws-cdk/aws-codedeploy": "^1.103.0",
     "@aws-cdk/aws-codepipeline": "^1.103.0",
     "@aws-cdk/aws-codepipeline-actions": "^1.103.0",
+    "@aws-cdk/aws-iam": "^1.103.0",
     "@aws-cdk/aws-lambda": "^1.103.0",
     "@aws-cdk/aws-s3": "^1.103.0",
     "@aws-cdk/core": "^1.103.0",
