--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@aws-cdk/aws-lambda": "^1.103.0",
     "@aws-cdk/aws-s3": "^1.103.0",
     "@aws-cdk/aws-s3-deployment": "^1.103.0",
+    "@aws-cdk/cloud-assembly-schema": "^1.103.0",
     "@aws-cdk/core": "^1.103.0",
     "@aws-cdk/pipelines": "^1.103.0",
     "aws-cdk": "^1.103.0",
