--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "dependencies": {
     "@aws-cdk/aws-codebuild": "^1.103.0",
+    "@aws-cdk/aws-cloudfront": "^1.103.0",
     "@aws-cdk/aws-codedeploy": "^1.103.0",
     "@aws-cdk/aws-codepipeline": "^1.103.0",
     "@aws-cdk/aws-codepipeline-actions": "^1.103.0",
