--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "typescript": "~3.9.7"
   },
   "dependencies": {
+    "@aws-cdk/aws-certificatemanager": "^1.103.0",
     "@aws-cdk/aws-codebuild": "^1.103.0",
     "@aws-cdk/aws-cloudfront": "^1.103.0",
     "@aws-cdk/aws-codedeploy": "^1.103.0",
@@ -26,6 +27,7 @@
     "@aws-cdk/aws-codepipeline-actions": "^1.103.0",
     "@aws-cdk/aws-iam": "^1.103.0",
     "@aws-cdk/aws-lambda": "^1.103.0",
+    "@aws-cdk/aws-route53": "^1.103.0",
     "@aws-cdk/aws-s3": "^1.103.0",
     "@aws-cdk/aws-s3-deployment": "^1.103.0",
     "@aws-cdk/cloud-assembly-schema": "^1.103.0",
