--- a/package.json
+++ b/package.json
@@ -14,19 +14,23 @@
     "@types/jest": "^26.0.10",
     "@types/node": "10.17.27",
     "jest": "^26.4.2",
+    "parcel": "^2.0.0-beta.1",
     "ts-jest": "^26.2.0",
     "ts-node": "^9.0.0",
     "typescript": "~3.9.7"
   },
   "dependencies": {
+    "@aws-cdk/aws-apigatewayv2": "^1.105.0",
+    "@aws-cdk/aws-apigatewayv2-integrations": "^1.105.0",
     "@aws-cdk/aws-certificatemanager": "^1.103.0",
-    "@aws-cdk/aws-codebuild": "^1.103.0",
     "@aws-cdk/aws-cloudfront": "^1.103.0",
+    "@aws-cdk/aws-codebuild": "^1.103.0",
     "@aws-cdk/aws-codedeploy": "^1.103.0",
     "@aws-cdk/aws-codepipeline": "^1.103.0",
     "@aws-cdk/aws-codepipeline-actions": "^1.103.0",
     "@aws-cdk/aws-iam": "^1.103.0",
-    "@aws-cdk/aws-lambda": "^1.103.0",
+    "@aws-cdk/aws-lambda": "^1.105.0",
+    "@aws-cdk/aws-lambda-nodejs": "^1.105.0",
     "@aws-cdk/aws-route53": "^1.103.0",
     "@aws-cdk/aws-s3": "^1.103.0",
     "@aws-cdk/aws-s3-deployment": "^1.103.0",
