--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@aws-cdk/aws-lambda": "^1.105.0",
     "@aws-cdk/aws-lambda-nodejs": "^1.105.0",
     "@aws-cdk/aws-route53": "^1.103.0",
+    "@aws-cdk/aws-route53-targets": "^1.105.0",
     "@aws-cdk/aws-s3": "^1.103.0",
     "@aws-cdk/aws-s3-deployment": "^1.103.0",
     "@aws-cdk/cloud-assembly-schema": "^1.103.0",
